# vito-uart

./: BRANCH_TEST_DELETE_ME.txt  CMakeLists.txt  ReadMe.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: main.yaml
Docs/: Atharva Umesh U @ purdue.edu.onepkg  Testplan-UART.xlsx  spec (2).md
UVM/: UART.sv  UART_env.sv  UART_test.sv  bus_intf.sv  bus_seq_item.sv  bus_sequence.sv  uart_intf.sv  uart_seq_item.sv  uart_sequence.sv
UVM/bus_agent/: bus_agent.sv  bus_driver.sv  bus_monitor.sv  bus_seqr.sv
UVM/uart_agent/: uart_agent.sv  uart_driver.sv  uart_monitor.sv  uart_seqr.sv
dv/: AHBUart.cpp  AHBUart_tl.sv  CMakeLists.txt  bus_protocol_if.sv
dv/loopback/: Loopback_tb.cpp  Loopback_tb.sv
rtl/: AHBUart.core  AHBUart.sv  AHBUart_dependencies.sv  AHBUart_fpga_wrapper.sv  AHBUart_fsm_controller.sv  AHBUart_new.sv  AHBUart_tapeout.sv  AHBUart_tb.sv  AHBuart_tb.sv  CMakeLists.txt
